2007-01-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseHandler.unregisterCommand):  Add a
	method to remove support for a command from a Handler instance.

	* pykickstart/version.py:  Add support for the F7 version.
	* pykickstart/commands/f7.py:  Add a devel version that removes the
	deprecated langsupport and mouse commands.

	* pykickstart/options.py (KSOptionParser.__init__):  Move call to
	superclass __init__ to where it belongs.
	(KSOptionParser.check_values):  Deprecated should be a flag, not a
	version number.

	* pykickstart/parser.py (Packages):  Accept a --default argument to
	specify that the default package set should be installed (#221305).
	(KickstartParser.handlePackageHdr):  Likewise.
	(KickstartParser.__init__):  KickstartParser needs to accept a version
	argument as well.

	* validator/ksvalidator:  Pass the version to KickstartParser.

2007-01-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.readKickstartFromString):
	Add a method to read a kickstart file from a string, in addition to
	the one that's already there for reading from a file.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version, finally.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Script.__str__):  Write out --interpreter
	since that's what the parser expects (#222877).

	* pykickstart/commands/fc4.py:  Fix exception error messages.

2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseHandler.empty):  Add a method to
	empty out the contents of the commands dict.

	* pykickstart/commands/fc4.py (BaseHandler.Upgrade):  Only set upgrade
	if that's what the current command is.
	(BaseHandler.RootPw):  rootpw -> password

2007-01-15  Chris Lumens  <clumens@redhat.com>
