@@ -98,7 +98,7 @@ class FC5Handler(FC4Handler):
                 elif value == "RAID6" or value == "6":
                     parser.values.ensure_value(option.dest, "RAID6")
 
-            op = KSOptionParser(self.lineno)
+            op = KSOptionParser(lineno=self.lineno)
             op.add_option("--bytes-per-inode", dest="bytesPerInode", action="store",
                           type="int", nargs=1)
             op.add_option("--device", action="callback", callback=device_cb,
